# FinWidget

./: .coveragerc  .env_template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  user_settings.json
src/: copy_operations_file.py  debug_preview_excel.py  main.py  reports.py  services.py  streamlit_app.py  utils.py  utils_logger.py  views.py
src/data/: operations2.xlsx  operations3.xlsx
tests/: test_copy_operations_file.py  test_debug_preview_excel.py  test_reports.py  test_services.py  test_utils.py  test_views.py
